# mecode_viewer

./: .gitignore  404.html  CONTRIBUTING.rst  ENV.yml  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  code_dev.ipynb  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: pypi-publish.yml  python-package.yml
api/: index.html
contributing/: index.html
docs/: Makefile  api.md  contributing.md  index.md
docs_old/: conf.py  index.rst  installation.rst  make.bat  usage.rst
gcode_examples/: meander.pgm  rectangle.pgm  rectangle.py
jlab_tests/: code_dev.ipynb  print_history.json  test.py  test_abs2rel2abs.py  test_abs_mode.py  test_arbitrary_extruder_source.py  test_rel_mode.py  test_two_inputs.py  test_view_droplet.py  test_vpython_printHead.py  test_vpython_simple.py
jlab_tests/gcode_examples/: LineTest_Div_3LinDist182.PGM  LineTest_Div_3LinDist182_noVars.PGM  LineTest_Div_3LinDist182_short.PGM  dogbone.pgm  re-entrant__1x1_10mmx10mm_25layers__0.5dN_0.4dz_1passes_-2taper.pgm  re-entrant__3x3_30mmx30mm_25layers__0.5dN_0.4dz_1passes_-2taper.pgm  spiral_w_LAs.pgm  test_abs2rel2abs.pgm  test_abs2rel2abs_short.pgm
license/: index.html
mecode_viewer/: __init__.py  __init__.py   cli.py  main.py  mecode_viewer.py
mecode_viewer/jlab_tests/gcode_examples/: 60deg_0.6rw_strand-center_T26C_prod.pgm  single_filament.pgm
release-notes/: index.html
search/: search_index.json
tests/: __init__.py  test_mecode_viewer.py
