[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mecode-viewer"
dynamic = ["version"]
description = "Simple GCode Viewer"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "Rodrigo Telles", email = "rtelles@g.harvard.edu" },
]
keywords = [
    "mecode_viewer",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "gcode_helpers>=0.3.0",
    "matplotlib",
    "numpy",
    "vpython"
]

[project.scripts]
mecode_viewer = "mecode_viewer.cli:main"

[project.urls]
Homepage = "https://github.com/rtellez700/mecode_viewer"

[tool.hatch.version]
path = "mecode_viewer/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/mecode_viewer",
]
exclude = [
    "./github",
    "/docs"
]